# hippo

./: .dockerignore  .env.example  .gitignore  CLI_FIX.md  Dockerfile  PARAMETER_AUDIT.md  README.md  SOGOU_FIX.md  TROUBLESHOOTING.md  __init__.py  check_sogou_fix.py  hippo-sync-worker.service  hippo.service  normalize_html.py  profiles.toml.example  pyproject.toml  requirements-cli.txt  uv.toml
.mimocode/plans/: 1783827602483-hidden-meadow.md
docs/api/: article.md
docs/superpowers/plans/: 2026-03-20-article-reader-facets.md  2026-03-21-special-article-content-backfill.md  2026-07-04-sync-refactor.md
docs/superpowers/specs/: 2026-03-20-article-reader-facets-design.md  2026-03-21-special-article-content-backfill-design.md  2026-05-10-sync-failure-banner-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.test.ts  index.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ConfirmModal.tsx  ContextMenu.tsx  EmptyState.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  LoadingIndicator.tsx  TopBar.tsx  visualHierarchy.test.tsx
frontend/src/hooks/: useArticleFilters.ts  useArticleReader.ts  useMediaQuery.ts  usePolling.ts  useReaderSettings.ts  useResizable.ts  useToast.test.tsx  useToast.tsx
frontend/src/i18n/: index.test.tsx  index.tsx  zh-CN.json
frontend/src/pages/articles/: ArticleCard.tsx  ArticleContent.tsx  ArticleFilterSummary.test.tsx  ArticleFilterSummary.tsx  ArticleFilters.tsx  ArticleHeader.tsx  ArticleList.tsx  ArticlePreview.tsx  ArticleResizer.tsx  ArticleTypeFacets.tsx  ArticlesPage.tsx  ItemShowTypeBadge.test.tsx  ItemShowTypeBadge.tsx  ReaderControls.tsx  contentKeys.test.ts  contentKeys.ts  filtering.ts  itemShowType.ts
frontend/src/pages/groups/: AccountCard.tsx  AccountCardGrid.test.tsx  AccountCardGrid.tsx  AccountSearchModal.tsx  BatchActions.tsx  GroupContextMenu.tsx  GroupHeader.tsx  GroupList.tsx  (+3 more)
frontend/src/store/: articles.tsx  groups.test.tsx  groups.tsx  index.tsx  settings.tsx  shared.ts
frontend/src/styles/: articles.css  common.css  groups.css  settings.css
frontend/src/test/: setup.ts
frontend/src/utils/: clipboard.ts  constants.ts  events.test.ts  events.ts  facets.ts  format.test.ts  format.ts  latest.test.ts  latest.ts  markdown.test.tsx  markdown.ts  sync.ts
hippo/: __init__.py  __main__.py  article_queries.py  avatar.py  cli.py  config.py  container.py  downloader.py  emailer.py  env.py  exceptions.py  file_storage.py  http.py  image_backfill.py  image_hashes.py  image_store.py  logger.py  login_manager.py  login_service.py  models.py  normalize_html.py  queries.py  repositories.py  rss.py  s3.py  server.py  storage.py  sync_core.py  sync_jobs.py  sync_scheduler.py  sync_service.py  sync_settings.py  sync_tasks.py  sync_types.py  sync_worker.py  utils.py  wechat_api.py  wechat_parser.py
hippo/controllers/: __init__.py  sync.py
schema/: postgres.sql  sqlite.sql
scripts/: debug_markdown.py  export_to_pg.py  fill_pg_images.py  fix_html_entities.py  migrate_article_images_s3.py  migrate_cover_images.py  print_qr.py  test_normalize_html.py
static/: app.js  articles.css  articles.js  articles_facets.js  common.css  groups.css  groups.js  index.html  settings.js  styles.css  sync.css  sync.js
static/i18n/: zh-CN.json
static/pages/: articles.html  groups.html  settings.html  sync.html
tests/: test_account_api.py  test_article_content_presence.py  test_article_item_show_type.py  test_articles_frontend_logic.py  test_cli_backfill_content_json.py  test_frontend_regressions.py  test_http.py  test_server_listeners.py  test_settings_api_namespace.py  test_storage.py  test_sync_frontend_logic.py  test_sync_job_queue.py  test_sync_settings.py  test_wechat_parser.py
wechatcli/: __main__.py  cli.py  config.py  downloader.py  http.py  logger.py  models.py  storage.py  utils.py
(+17 files in other folders)
