[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippo"
version = "0.1.0"
description = "WeChat article exporter CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "hippo"}]
keywords = ["wechat", "cli", "exporter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "typer>=0.21.0",
  "httpx[http2,socks]>=0.28.0",
  "beautifulsoup4>=4.14.0",
  "markdownify>=1.2.0",
  "platformdirs>=4.5.0",
  "psycopg2-binary>=2.9.11",
  "tqdm>=4.67.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
hippo = "hippo.cli:app"

[tool.setuptools]
py-modules = ["normalize_html", "__init__"]
packages = ["hippo"]
