[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippo"
version = "0.1.0"
description = "WeChat article exporter CLI"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "hippo"}]
keywords = ["wechat", "cli", "exporter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.110.0",
  "typer>=0.21.0",
  "httpx[http2,socks]>=0.28.0",
  "beautifulsoup4>=4.14.0",
  "markdownify>=1.2.0",
  "platformdirs>=4.5.0",
  "pillow>=10.0.0",
  "pyzbar>=0.1.9",
  "qrcode>=7.4.2",
  "psycopg2-binary>=2.9.11",
  "tqdm>=4.67.0",
  "jieba>=0.42.1",
  "uvicorn[standard]>=0.29.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
hippo = "hippo.cli:app"

[tool.setuptools]
py-modules = ["__init__"]
packages = ["hippo", "hippo.controllers"]
