[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippo"
version = "0.1.0"
description = "WeChat articles manager and exporter"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "sunnysab <i@sunnysab.cn>"}]
keywords = ["wechat", "cli", "exporter", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.110.0",
  "typer>=0.21.0",
  "httpx[http2,socks]>=0.28.0",
  "beautifulsoup4>=4.14.0",
  "markdownify>=1.2.0",
  "platformdirs>=4.5.0",
  "pillow>=10.0.0",
  "pyzbar>=0.1.9",
  "qrcode>=7.4.2",
  "psycopg[binary]>=3.2.2",
  "psycopg-pool>=3.2.6",
  "tqdm>=4.67.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.1",
  "jieba>=0.42.1",
  "uvicorn[standard]>=0.29.0",
  "tomli>=2.0.1; python_version<'3.11'",
  "quickjs>=1.19.4",
]

[project.scripts]
hippo = "hippo.cli:app"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "RUF"]
ignore = [
  "ARG",   # unused-argument (too noisy, often intentional)
  "B008",  # function-call-in-default-argument (standard FastAPI/Typer pattern)
  "E402",  # module-import-not-at-top-of-file (jieba fallback imports)
  "E501",  # line-too-long (handled by formatter)
  "N818",  # exception name suffix
  "B904",  # raise-within-try (too noisy for existing code)
  "RUF001",  # ambiguous-unicode-character-string (false positives for Chinese text)
  "RUF002",  # ambiguous-unicode-character-docstring (false positives for Chinese text)
  "RUF003",  # ambiguous-unicode-character-comment (false positives for Chinese text)
  "RUF006",  # asyncio-dangling-task (known fire-and-forget patterns)
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.setuptools]
py-modules = ["__init__"]
packages = ["hippo", "hippo.controllers"]
